<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/listview_item_background"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="top"
        android:layout_marginLeft="@dimen/list_default_connent_margin"
        android:layout_marginRight="@dimen/list_default_connent_margin"
        >
        <TextView
            style="@style/textStyle_highlight"
            android:id="@+id/comment_item_author"
            android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:text="@string/detail_default_comment_author"
        	android:layout_weight="1"
            />
        
        <TextView
            style="@style/textStyle_lighter"
            android:id="@+id/comment_item_time"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/detail_comment_default_time"
        	
            />
    </LinearLayout>

    <TextView
            style="@style/textStyle_smaller"
            android:id="@+id/comment_item_content"
            android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/detail_comment_default_content"
        	android:singleLine="false"
        	android:maxLines="200"
        	android:layout_marginLeft="@dimen/list_default_connent_margin"
      		android:layout_marginRight="@dimen/list_default_connent_margin"
            />
    
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_divider_line_height"
        android:background="@color/list_divider_line"
        >
    </View>
        
</LinearLayout>