<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <include layout="@layout/titlebar"/>
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/list_default_connent_margin"
            android:layout_marginTop="@dimen/list_default_connent_margin"
            android:orientation="vertical" >

            <include layout="@layout/dividerline"/>

            <LinearLayout
                android:id="@+id/settings_checkupdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/listview_item_background"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/list_default_connent_margin"
                android:paddingRight="@dimen/list_default_connent_margin" >

                <TextView
                    style="@style/textStyle_normal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/settings_checkupdate" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/list_default_connent_margin"
                    android:src="@drawable/arror_next" />
            </LinearLayout>

           <include layout="@layout/dividerline"/>
            
            <LinearLayout
                android:id="@+id/settings_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/listview_item_background"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/list_default_connent_margin"
                android:paddingRight="@dimen/list_default_connent_margin" >

                <TextView
                    style="@style/textStyle_normal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/settings_feedback" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/list_default_connent_margin"
                    android:src="@drawable/arror_next" />
            </LinearLayout>

            <include layout="@layout/dividerline"/>
            <LinearLayout
                android:id="@+id/settings_recommend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/listview_item_background"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/list_default_connent_margin"
                android:paddingRight="@dimen/list_default_connent_margin" >

                <TextView
                    style="@style/textStyle_normal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/settings_recommend" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/list_default_connent_margin"
                    android:src="@drawable/arror_next" />
            </LinearLayout>
            
            <include layout="@layout/dividerline"/>
            <LinearLayout
                android:id="@+id/settings_clearcache"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/listview_item_background"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/list_default_connent_margin"
                android:paddingRight="@dimen/list_default_connent_margin" >

                <TextView
                    style="@style/textStyle_normal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/settings_clearcache" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/list_default_connent_margin"
                    android:src="@drawable/arror_next" />
            </LinearLayout>
            
            <include layout="@layout/dividerline"/>
            <LinearLayout
                android:id="@+id/settings_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/listview_item_background"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/list_default_connent_margin"
                android:paddingRight="@dimen/list_default_connent_margin" >

                <TextView
                    style="@style/textStyle_normal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/settings_rateus" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/list_default_connent_margin"
                    android:src="@drawable/arror_next" />
            </LinearLayout>
            
            <include layout="@layout/dividerline"/>
            <LinearLayout
                android:id="@+id/settings_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/listview_item_background"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/list_default_connent_margin"
                android:paddingRight="@dimen/list_default_connent_margin" >

                <TextView
                    style="@style/textStyle_normal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/settings_about" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/list_default_connent_margin"
                    android:src="@drawable/arror_next" />
            </LinearLayout>
            
            <include layout="@layout/dividerline"/>
            
            <TextView
                    style="@style/textStyle_lighter"
                    android:layout_marginTop="@dimen/list_default_connent_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/settings_footer_tips" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>